# Exact-ESP

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.json
cpp_program/: CMakeLists.txt
cpp_program/extractor/: CMakeLists.txt  extractor.cpp  osmExtractor.hpp  specialGraphConstructor.hpp  triangulator.hpp
cpp_program/router/: CMakeLists.txt  deadendFinder.hpp  edgeLocator.hpp  edgePruning.hpp  graph.hpp  heuristikEdgePruning.hpp  landmarks.hpp  polyanya.hpp  router.cpp  test.hpp
cpp_program/utils/: CMakeLists.txt  cgalTypes.hpp  io.hpp  mathLib.hpp  route_to_gl.cpp  section.hpp  settings.hpp  timer.hpp  types.hpp  unionFind.hpp
data/batch/: exampleBatchInput.txt  exampleInput.scen
data/triangulation/: Cauldron.fmi  coastlinesFlake.fmi  coastlines_shrunk_1.7z  coastlines_shrunk_10.fmi  coastlines_shrunk_100.fmi  coastlines_shrunk_1000.fmi  coastlines_shrunk_10000.fmi  coastlines_shrunk_2.7z  polyanyaWorstCase_10.fmi  polyanyaWorstCase_100.fmi  polyanyaWorstCase_1000.fmi  polyanyaWorstCase_10000.fmi  test.fmi
scripts/: CMakeLists.txt  boxplot.py  genWorstCasePolyanja.py  plot.py  printGLFile.py  printGraph.py  results.csv  shrinkerNew.cpp
